Journal Day 3 update with date to string bugs to work through to see if it works

--- a/Journal/Journal/Views/Base.lproj/Main.storyboard
+++ b/Journal/Journal/Views/Base.lproj/Main.storyboard
@@ -29,12 +29,12 @@
                                             <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="dLp-Kf-tBH">
                                                 <rect key="frame" x="0.0" y="0.0" width="398" height="32"/>
                                                 <segments>
-                                                    <segment title="Ecstatic"/>
-                                                    <segment title="Dejected"/>
-                                                    <segment title="Meh"/>
+                                                    <segment title="Ecstatic 😀"/>
+                                                    <segment title="Dejected 😫"/>
+                                                    <segment title="Meh 😐"/>
                                                 </segments>
                                                 <connections>
-                                                    <action selector="sControl:" destination="BYZ-38-t0r" eventType="valueChanged" id="ifO-rF-2Ol"/>
+                                                    <action selector="segmentedValueChange:" destination="BYZ-38-t0r" eventType="valueChanged" id="ifO-rF-2Ol"/>
                                                 </connections>
                                             </segmentedControl>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ENTRY" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mW4-op-s5D">
@@ -202,12 +202,12 @@
                                                     <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="8rM-ol-bqa">
                                                         <rect key="frame" x="0.0" y="0.0" width="374" height="32"/>
                                                         <segments>
-                                                            <segment title="Ecstatic"/>
-                                                            <segment title="Dejected"/>
-                                                            <segment title="Meh"/>
+                                                            <segment title="Ecstatic 😀"/>
+                                                            <segment title="Dejected 😫"/>
+                                                            <segment title="Meh 😐"/>
                                                         </segments>
                                                         <connections>
-                                                            <action selector="sControl:" destination="SSz-pw-egY" eventType="valueChanged" id="YKM-mb-hfZ"/>
+                                                            <action selector="segmentedControlValueChange:" destination="SSz-pw-egY" eventType="valueChanged" id="YKM-mb-hfZ"/>
                                                         </connections>
                                                     </segmentedControl>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Entry" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="r5v-VH-3uJ">
