added sendEntryToServer method and called in VC's

--- a/Journal/Journal/Storyboards/Base.lproj/Main.storyboard
+++ b/Journal/Journal/Storyboards/Base.lproj/Main.storyboard
@@ -235,7 +235,7 @@
                     <navigationItem key="navigationItem" title="Journal" id="BTj-I5-5hW">
                         <barButtonItem key="rightBarButtonItem" title="Item" image="plus.app" catalog="system" id="c8W-i3-kER">
                             <connections>
-                                <segue destination="5oh-8O-9Wn" kind="presentation" modalPresentationStyle="fullScreen" id="q5j-mJ-Jmv"/>
+                                <segue destination="5oh-8O-9Wn" kind="presentation" identifier="CreateEntry" modalPresentationStyle="fullScreen" id="q5j-mJ-Jmv"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
