--- a/Journal/Journal/Views/Base.lproj/Main.storyboard
+++ b/Journal/Journal/Views/Base.lproj/Main.storyboard
@@ -26,8 +26,16 @@
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
+                                    <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="1" translatesAutoresizingMaskIntoConstraints="NO" id="jVp-1k-xvK">
+                                        <rect key="frame" x="0.0" y="45" width="394" height="32"/>
+                                        <segments>
+                                            <segment title="😔"/>
+                                            <segment title="😐"/>
+                                            <segment title="😄"/>
+                                        </segments>
+                                    </segmentedControl>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="dUM-vU-Rq2">
-                                        <rect key="frame" x="0.0" y="45" width="394" height="265"/>
+                                        <rect key="frame" x="0.0" y="91" width="394" height="219"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Entry" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vuR-DM-jw4">
                                                 <rect key="frame" x="0.0" y="0.0" width="394" height="21"/>
@@ -46,9 +54,8 @@
                                                 </constraints>
                                             </view>
                                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pwy-dX-FA0">
-                                                <rect key="frame" x="0.0" y="39" width="394" height="226"/>
+                                                <rect key="frame" x="0.0" y="39" width="394" height="180"/>
                                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
                                                 <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
@@ -65,10 +72,12 @@
                                     </stackView>
                                 </subviews>
                                 <constraints>
+                                    <constraint firstItem="jVp-1k-xvK" firstAttribute="leading" secondItem="sNd-3W-N3n" secondAttribute="leading" id="HLj-dY-vex"/>
                                     <constraint firstAttribute="trailing" secondItem="gdu-zI-eHR" secondAttribute="trailing" id="J2L-e3-eat"/>
                                     <constraint firstItem="dUM-vU-Rq2" firstAttribute="leading" secondItem="sNd-3W-N3n" secondAttribute="leading" id="h0u-O9-S3X"/>
                                     <constraint firstAttribute="trailing" secondItem="dUM-vU-Rq2" secondAttribute="trailing" id="lg2-7z-lES"/>
                                     <constraint firstItem="gdu-zI-eHR" firstAttribute="leading" secondItem="sNd-3W-N3n" secondAttribute="leading" id="mS2-z2-jUH"/>
+                                    <constraint firstAttribute="trailing" secondItem="jVp-1k-xvK" secondAttribute="trailing" id="meh-1q-9Cb"/>
                                 </constraints>
                             </stackView>
                         </subviews>
@@ -95,14 +104,15 @@
                     </navigationItem>
                     <connections>
                         <outlet property="bodyTextView" destination="pwy-dX-FA0" id="rfX-wJ-bTf"/>
+                        <outlet property="moodSegmentedControl" destination="jVp-1k-xvK" id="HfA-An-h40"/>
                         <outlet property="titleTextField" destination="gdu-zI-eHR" id="zKi-ut-KdA"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4100" y="340.84821428571428"/>
+            <point key="canvasLocation" x="3957" y="-161"/>
         </scene>
-        <!--Entries Table View Controller-->
+        <!--Journal-->
         <scene sceneID="5av-Xb-sWG">
             <objects>
                 <tableViewController id="2qh-jK-Nbj" customClass="EntriesTableViewController" customModule="Journal" customModuleProvider="target" sceneMemberID="viewController">
@@ -158,6 +168,7 @@
                                     <outlet property="bodyTextLabel" destination="zsy-aT-OVo" id="EU1-sG-CZQ"/>
                                     <outlet property="timestampLabel" destination="99V-Lr-cw6" id="he0-9c-Uk7"/>
                                     <outlet property="titleLabel" destination="FyY-xb-B8S" id="pJA-sg-bbt"/>
+                                    <segue destination="Vsn-CE-23O" kind="show" identifier="EntryDetailSegue" id="Uyf-qP-VdX"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -166,10 +177,10 @@
                             <outlet property="delegate" destination="2qh-jK-Nbj" id="bXf-4a-Bqw"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" id="zf5-hX-Iz8">
+                    <navigationItem key="navigationItem" title="Journal" id="zf5-hX-Iz8">
                         <barButtonItem key="rightBarButtonItem" title="Item" image="plus.app" catalog="system" id="2fi-kJ-8mZ">
                             <connections>
-                                <segue destination="Gkf-Kl-Kkz" kind="presentation" modalPresentationStyle="fullScreen" id="r39-CY-zEC"/>
+                                <segue destination="Gkf-Kl-Kkz" kind="presentation" identifier="CreateEntrySegue" modalPresentationStyle="fullScreen" id="r39-CY-zEC"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -178,13 +189,107 @@
             </objects>
             <point key="canvasLocation" x="2366.666666666667" y="339.50892857142856"/>
         </scene>
+        <!--Entry Details-->
+        <scene sceneID="MZW-Sq-YAz">
+            <objects>
+                <viewController id="Vsn-CE-23O" customClass="EntryDetailViewController" customModule="Journal" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="XhY-dL-6EA">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" alignment="top" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="ZNO-au-dYm">
+                                <rect key="frame" x="20" y="160" width="374" height="358.5"/>
+                                <subviews>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Journal Entry Title" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="fdF-Dd-p5e">
+                                        <rect key="frame" x="0.0" y="0.0" width="374" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="30" id="iaq-rh-nyb"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="1" translatesAutoresizingMaskIntoConstraints="NO" id="3vP-i9-phL">
+                                        <rect key="frame" x="0.0" y="45" width="374" height="38"/>
+                                        <segments>
+                                            <segment title="😔"/>
+                                            <segment title="😐"/>
+                                            <segment title="😄"/>
+                                        </segments>
+                                    </segmentedControl>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="zEB-6r-JYg">
+                                        <rect key="frame" x="0.0" y="97" width="374" height="261.5"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Entry" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2lj-6R-CSn">
+                                                <rect key="frame" x="0.0" y="0.0" width="374" height="21"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="21" id="dAs-Ur-0UI"/>
+                                                </constraints>
+                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="e48-a0-mR5">
+                                                <rect key="frame" x="0.0" y="29" width="374" height="2"/>
+                                                <color key="backgroundColor" systemColor="opaqueSeparatorColor" red="0.77647058820000003" green="0.77647058820000003" blue="0.7843137255" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="2" id="GEr-r6-ULe"/>
+                                                </constraints>
+                                            </view>
+                                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Hcb-Ud-ECJ">
+                                                <rect key="frame" x="0.0" y="39" width="374" height="222.5"/>
+                                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                                <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                            </textView>
+                                        </subviews>
+                                        <constraints>
+                                            <constraint firstItem="e48-a0-mR5" firstAttribute="leading" secondItem="zEB-6r-JYg" secondAttribute="leading" id="2zj-cW-tU3"/>
+                                            <constraint firstAttribute="trailing" secondItem="Hcb-Ud-ECJ" secondAttribute="trailing" id="LNj-og-gYP"/>
+                                            <constraint firstAttribute="trailing" secondItem="e48-a0-mR5" secondAttribute="trailing" id="OuN-Xx-lqm"/>
+                                            <constraint firstItem="2lj-6R-CSn" firstAttribute="leading" secondItem="zEB-6r-JYg" secondAttribute="leading" id="Swr-6Y-RVM"/>
+                                            <constraint firstItem="Hcb-Ud-ECJ" firstAttribute="leading" secondItem="zEB-6r-JYg" secondAttribute="leading" id="XG9-HC-TAc"/>
+                                            <constraint firstAttribute="trailing" secondItem="2lj-6R-CSn" secondAttribute="trailing" id="lit-jP-HJI"/>
+                                        </constraints>
+                                    </stackView>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="3vP-i9-phL" secondAttribute="trailing" id="2hW-f9-cRJ"/>
+                                    <constraint firstAttribute="trailing" secondItem="fdF-Dd-p5e" secondAttribute="trailing" id="CWJ-Pd-zXD"/>
+                                    <constraint firstItem="3vP-i9-phL" firstAttribute="leading" secondItem="ZNO-au-dYm" secondAttribute="leading" id="GFv-wa-Ahz"/>
+                                    <constraint firstItem="fdF-Dd-p5e" firstAttribute="leading" secondItem="ZNO-au-dYm" secondAttribute="leading" id="Mhr-lh-tba"/>
+                                    <constraint firstItem="zEB-6r-JYg" firstAttribute="leading" secondItem="ZNO-au-dYm" secondAttribute="leading" id="WB0-Ro-swT"/>
+                                    <constraint firstAttribute="trailing" secondItem="zEB-6r-JYg" secondAttribute="trailing" id="zOU-4A-RD3"/>
+                                </constraints>
+                            </stackView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="v5W-cK-mpS" firstAttribute="trailing" secondItem="ZNO-au-dYm" secondAttribute="trailing" constant="20" id="Eyd-QB-kAB"/>
+                            <constraint firstItem="ZNO-au-dYm" firstAttribute="top" secondItem="v5W-cK-mpS" secondAttribute="top" constant="20" id="iQo-lN-7Tn"/>
+                            <constraint firstItem="ZNO-au-dYm" firstAttribute="height" secondItem="XhY-dL-6EA" secondAttribute="height" multiplier="0.4" id="ns6-uX-3Es"/>
+                            <constraint firstItem="ZNO-au-dYm" firstAttribute="leading" secondItem="v5W-cK-mpS" secondAttribute="leading" constant="20" id="x7Z-9r-7Sr"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="v5W-cK-mpS"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Entry Details" id="Ag1-Nq-YBi"/>
+                    <connections>
+                        <outlet property="moodSegmentedControl" destination="3vP-i9-phL" id="Wib-Rr-4XW"/>
+                        <outlet property="notesTextView" destination="Hcb-Ud-ECJ" id="ra9-XY-YoI"/>
+                        <outlet property="titleTextField" destination="fdF-Dd-p5e" id="gTr-xX-kpe"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="TgT-Ro-bzF" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3135" y="510"/>
+        </scene>
         <!--Navigation Controller-->
         <scene sceneID="gGX-cm-Eij">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="miE-Qs-Pse" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="2D8-hh-JOu">
-                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" largeTitles="YES" id="2D8-hh-JOu">
+                        <rect key="frame" x="0.0" y="44" width="414" height="96"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
@@ -212,7 +317,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="B4a-xt-doF" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3281" y="341"/>
+            <point key="canvasLocation" x="3136" y="-161"/>
         </scene>
     </scenes>
     <resources>
