Saves and Deletes from firebase

--- a/Journal/Journal/View/Base.lproj/Main.storyboard
+++ b/Journal/Journal/View/Base.lproj/Main.storyboard
@@ -159,7 +159,7 @@
                                     <outlet property="dateAndTimeLabel" destination="Nql-Mz-rRu" id="ZB1-tK-iax"/>
                                     <outlet property="excerptLabel" destination="QA4-2z-skI" id="y3N-Z7-BOG"/>
                                     <outlet property="titleLabel" destination="foT-E6-Rk0" id="D5v-Dq-LVP"/>
-                                    <segue destination="ueD-BI-cwL" kind="show" id="iZb-QN-gwB"/>
+                                    <segue destination="ueD-BI-cwL" kind="show" identifier="ShowEntryDetailSegue" id="iZb-QN-gwB"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -171,7 +171,7 @@
                     <navigationItem key="navigationItem" title="Journal" id="bUh-sI-rl6">
                         <barButtonItem key="rightBarButtonItem" image="plus.rectangle" catalog="system" id="bMv-0b-UZU">
                             <connections>
-                                <segue destination="3ad-In-tk1" kind="presentation" modalPresentationStyle="fullScreen" id="UaR-CZ-bIH"/>
+                                <segue destination="3ad-In-tk1" kind="presentation" identifier="CreateEntrySegue" modalPresentationStyle="fullScreen" id="UaR-CZ-bIH"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -280,7 +280,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fLL-ud-IQc" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="767" y="1030"/>
+            <point key="canvasLocation" x="623" y="1122"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="BVF-a8-wHn">
